--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,5 +30,5 @@ body {
   width: 100%;
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
 }
