--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,4 +31,14 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: repeat-y;
+
+  animation: myanimation 60s infinite;
+}
+
+@keyframes myanimation {
+  0% {background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../public/backdrop.jpg');}
+  25%{background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../public/backdrop2.jpg');}
+  50%{background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../public/backdrop3.jpg');}
+  75%{background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../public/backdrop4.jpg');}
+  100% {background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../public/backdrop5.jpg');}
 }
